# Amethyst

./: README.md
agent/: CMakeLists.txt  Makefile
agent/Agent/: Agent.c
agent/Agent/Core/Include/: Agent.h  Commands.h  Http.h  Serializer.h  Tasks.h  Win32.h
agent/Agent/Core/Lib/base64/: base64.c  base64.h
agent/Agent/Core/Lib/cJSON/: cJSON.c
agent/Agent/Core/Src/: Commands.c  Http.c  Serializer.c  Tasks.c  Win32.c
client/MacOS/: Amethyst.cpp  Amethyst.h  CMakeLists.txt  Makefile
client/MacOS/Extra/: MainWindow.ui
client/MacOS/Include/Amethyst/: AppManager.h  Controller.h  MainWindow.h
client/MacOS/Include/Amethyst/Dialogs/: ListenerDialog.h
client/MacOS/Include/Amethyst/Screens/: BuilderScreen.h
client/MacOS/Include/Amethyst/Utils/: CommandParser.h  Json.h
client/MacOS/Include/Amethyst/Widgets/: ListenerTable.h
client/MacOS/Src/Amethyst/: AppManager.cpp  MainWindow.cpp
client/MacOS/Src/Amethyst/Screens/: AgentScreen.cpp  BuilderScreen.cpp  ListenerScreen.cpp
client/MacOS/Src/Amethyst/Widgets/: ListenerTable.cpp
client/Windows/: CMakeLists.txt  main.cpp
client/Windows/Include/Amethyst/: SocketHandler.h
client/Windows/Include/Amethyst/Screens/: AgentScreen.h  ListenerScreen.h
client/Windows/Include/Amethyst/Widgets/: AgentCommanderTab.h  AgentSessionTable.h
client/Windows/Src/Amethyst/: Controller.cpp  SocketHandler.cpp
client/Windows/Src/Amethyst/Dialogs/: ListenerDialog.cpp
client/Windows/Src/Amethyst/Utils/: CommandParser.cpp  Json.cpp
client/Windows/Src/Amethyst/Widgets/: AgentCommanderTab.cpp  AgentSessionTable.cpp
teamserver/: go.mod  go.sum  main.go
teamserver/cmd/: init.go
teamserver/core/: agent.go  dispatch.go  events.go  handlers.go  http.go  operator.go  server.go  sockets.go  types.go
teamserver/tasks/: tasks.go
